# asrident

./: .gitignore  .gitmodules  Dockerfile  README.md  build_docker.sh  config_template.yml  docker_de_config.yml  download-tdnn.sh  download_models.py  local_de_config.yaml  local_de_config.yml  local_en_config.yml  model_download.sh  mqttrecorder.py  pyproject.toml  recorder.yml  remote_config.yml  requirements.txt  run_alsa_docker.sh  run_docker.sh  run_docker2.sh  run_whisper.sh  spkident.py  test_asrident.sh  test_config.yml  test_config_local.yml  tester.py  transpeak.py  update.sh
