[project]
name = "asrident"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ctranslate2>=4.6.0",
    "faster-whisper==1.1.1",
    "keras>=3.11.3",
    "paho-mqtt>=2.1.0",
    "pygobject>=3.48.1",
    "pyyaml>=6.0",
    "requests>=2.32",
    "resampy>=0.4.3",
    "scikit-learn>=1.7.1",
    "speechbrain>=1.0.3",
    "torchaudio<2.9",
    "torch>=2.6.0",
]
