[project]
name = "asrident"
version = "1.1.0"
description = "ASR and speaker identification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ctranslate2>=4.6.0",
    "faster-whisper==1.2.1",
    "paho-mqtt>=2.1.0",
    "pygobject>=3.48.1",
    "pyyaml>=6.0",
    "requests>=2.32",
    "resampy>=0.4.3",
    "torch>=2.8.0",
    "torchaudio<=2.8.0",
    "keras>=3.11.3",
    "scikit-learn>=1.7.1",
    "speechbrain>=1.0.3",
    "huggingface-hub<1.0.0",
    "whisper-gstreamer>=1.1.1",
]

[tool.uv.workspace]
members = [
    "whisper-gstreamer",
]

[tool.uv.sources]
whisper-gstreamer = { workspace = true }
